--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,10 +5,10 @@
   </div>
   <div class="row">
     <div class="btn-group-justified" role="group">
-      <button type="button" class="btn-default" routerLink="./" routerLinkActive="active">
+      <button type="button" class="btn-default" routerLink="./">
         Home
       </button>
-      <button type="button" class="btn-default" routerLink="./admin" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" *ngIf="isAdmin">
+      <button type="button" class="btn-default" routerLink="./admin" *ngIf="isAdmin">
         Admin Area
       </button>
     </div>
