--- a/src/app/admin/admin-list/admin-list.component.html
+++ b/src/app/admin/admin-list/admin-list.component.html
@@ -5,7 +5,7 @@
     </div>
   </div>
   <ul class="list-group">
-    <li class="list-group-item" *ngFor="let user of users">
+    <li class="list-group-item user" *ngFor="let user of users">
       <div class="col-md-4">
         {{ user.name }}
         <button type="button" class="btn-default" (click)="onSelect( user )">View User</button>
