Added route for add-occurrence and links for viewing users and adding occurrence.

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,2 +1,12 @@
 <h2>Admin Area</h2>
+<div class="row">
+    <div class="btn-group-justified" role="group">
+        <button type="button" class="btn-default" routerLink="./">
+            View Users
+        </button>
+        <button type="button" class="btn-default" routerLink="./add-occurrence">
+            Add Occurrence
+        </button>
+    </div>
+</div>
 <router-outlet></router-outlet>
